# SIFT-Sentinel

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo.py  install.sh  pyproject.toml  run_live.py
.claude/commands/: triage.md
audit/: base-dc-findings.md  demo.jsonl  execution-log-base-file.jsonl  execution-log-szechuan.jsonl  execution-log.jsonl  triage-report-base-dc-2026-06-14.md  triage-report-base-file.md  triage-report-citadel-dc01-2026-06-15.md
docs/: accuracy_report.md  architecture.md  dataset.md  devpost_story.md  installation.md  tools.md
scripts/: download_szechuan.sh  mount-case.sh  regen_demo_log.py
src/sift_sentinel/: __init__.py  audit.py  cache.py  concurrency.py  confidence.py  correlate.py  evidence.py  mcp_server.py  parsers.py  report.py  reputation.py  runner.py  tokens.py
src/sift_sentinel/benchmark/: __init__.py  score.py
src/sift_sentinel/orchestrator/: __init__.py  anthropic_reasoner.py  loop.py  prompts.py
src/sift_sentinel/tools/: __init__.py  amcache.py  base.py  event_logs.py  logon_summary.py  memory.py  mft_timeline.py  powershell_logs.py  prefetch.py  registry.py  (+6 more)
tests/: conftest.py  test_audit.py  test_benchmark.py  test_cache.py  test_concurrency.py  test_confidence.py  test_correlate.py  test_evidence.py  test_loop.py  test_parsers.py  test_reasoner.py  test_report.py  test_runner.py  test_tokens.py  test_tools.py
tests/fixtures/: amcache_sample.csv  evtx_sample.csv  mft_sample.csv  netscan_sample.csv  prefetch_sample.csv  regripper_sample.txt  sccainfo_sample.txt  shimcache_sample.csv  srum_sample.csv  yara_sample.txt
