[project]
name = "sift-sentinel"
version = "0.1.0"
description = "Autonomous, evidence-safe incident response agent for the SANS SIFT Workstation. Custom MCP server + self-correcting agent loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SIFT-Sentinel contributors" }]
keywords = ["dfir", "incident-response", "mcp", "forensics", "sift", "protocol-sift"]
dependencies = [
    "mcp>=1.2.0",
    "anthropic>=0.49.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sift-sentinel-server = "sift_sentinel.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sift_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
